# transparenciabr-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requests.http
.claude/: README.md
.claude/agents/: code-reviewer.md  data-modeler.md  deploy-checker.md  explorer.md
.claude/commands/: deploy-check.md  explain.md  new-endpoint.md  review.md  security-audit.md  test.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/add-test/: SKILL.md
.claude/skills/create-endpoint/: SKILL.md
.claude/skills/debug-api-external/: SKILL.md
.claude/skills/review-security/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 618b67e76ea3_cria_tabelas_cartoes_viagens_contratos_.py
app/: main.py
app/api/v1/: cartoes.py  contratos.py  licitacoes.py  router.py  viagens.py
app/clients/: transparencia.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  cartao.py  contrato.py  licitacao.py  viagem.py
app/schemas/: cartoes.py  comum.py  contratos.py  licitacoes.py  viagens.py
app/services/: cartoes.py  contratos.py  licitacoes.py  viagens.py
static/: index.html
tests/: test_cartoes.py  test_contratos.py  test_licitacoes.py  test_viagens.py
